# CONTEXT-POD

./: .env.development  .env.example  .gitignore  README.md  check-localstorage.js  clean-localstorage.js  index.html  package-lock.json  package.json  release-key.jks  tailwind.config.js  test-fix.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  想法.md  想法1.md  想法2.md  想法3.md  想法4.md  想法V1.md  想法V2.md  用户使用手册.md  赛博捏脸.md
.github/workflows/: ci.yml
scripts/: dev.ps1  setup.ps1
src/: App.vue  env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContactManager.vue  CustomAlert.vue  DiagnosticTest.vue  EvolutionTest.vue  FloatingActionButton.vue  FloatingPanel.vue  LogViewer.vue  PersonaQuiz.vue  PromptManager.vue  ReplyCard.vue  SettingsPanel.vue  StyleExtractor.vue
src/composables/: useCapture.ts  useWindowManager.ts
src/services/: agentWorkflow.ts  alertService.ts  conversationStateEngine.ts  evolutionEngine.ts  feedbackEvaluator.ts  llmService.ts  logger.ts  memoryService.ts  personaService.ts  promptService.ts
src/stores/: appStore.ts  contactStore.ts
src/types/: index.ts
src/utils/: platform.ts
tests/: V2.VERIFICATION.REPORT.md  system.test.js  v2.comprehensive.test.ts  v2.integration.test.ts
tests/integration/: app.test.ts
tests/unit/: ContactManager.test.ts  FloatingPanel.test.ts  ReplyCard.test.ts  SettingsPanel.test.ts  (+5 more)
(+1 files in other folders)
