[package]
name = "context-pod"
version = "0.1.0"
description = "伴聊悬浮舱 - 桌面端 AI Agent 智能体"
authors = ["Context-Pod Team"]
edition = "2021"

[lib]
name = "context_pod_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
